@@ -20,9 +20,15 @@
                     <li><a href=#tools-section>Tools</a></li>
                     <li><a href=#projects-section>Projects</a></li>
                 </ul>
-                <div class="navbar-nav-hamburger">
+                <a class="navbar-nav-hamburger" href="javascript:void(0);" onclick="show_nav()"> 
                     <i class="fa fa-bars fa-lg"></i>
-                </div>
+                </a>
+                <!-- hamburger menu items - hidden by default -->
+                <ul id="myLinks">
+                    <li><a href=#about-section>About</a></li>
+                    <li><a href=#tools-section>Tools</a></li>
+                    <li><a href=#projects-section>Projects</a></li>
+                </ul>
             </div>
 
             <div class="navbar-item navbar-brand">
@@ -36,10 +42,11 @@
                 <div class="hero-intro">
                     <span>About</span>
                     <div>&nbsp</div>  <!-- line break/empty space-->
-                    <p>A software engineering professional with an avid interest in data engineering, 
-                        web backend and possessing an eye for visual design. <br>
-                        My major working areas are Python-based backend development, automation and data engineering toolsets.
-                        I also work with fullstack development, notably with the MERN stack.
+                    <p>Hi! I'm a software engineering professional with an avid interest in process automation, 
+                        fullstack development and possessing an eye for visual design. My major working areas are 
+                        Python-based backend development, automation and data engineering with Google Cloud. I 
+                        also like to dabble with fullstack development and I'm looking to take this forward with Django
+                        and the MERN stack.
                     </p>
                     <button type="button" class="contact-button">Contact Me</button>
                 </div>
@@ -61,7 +68,14 @@
                         <img src="images/python.svg" alt="Python logo">
                         <div>Python</div>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, a? Dignissimos quis 
+                            I've used Python for all sorts of tasks, including: <br>
+                            <ul>
+                                <li>developing automation scripts</li>
+                                <li>developing machine learning models</li>
+                                <li>writing ETL pipelines</li>
+                                <li>performing API integrations</li>
+                                <li>and also developing backend systems using Flask and Django</li>
+                            </ul>
                         </p>
                     </div>
     
